# blog

./: blog.cabal  build-mdoc.sh  build-plots.sh  build.sh  card.html  card.vcf  cv.html  cv.md  cv.tex  dates.py  header.tex  index.html  my.css  newpage.lua  plaincv.md  readme.md  shell.nix  site.hs  template.tex
.github/workflows/: hakyll-gh-pages.yml  jekyll-gh-pages.yml
css/: dark.scss  syntax.css
mdoc-posts/: 2023-03-28-count-distinct-at-scale-I.md  2023-03-30-count-distinct-at-scale-II.md  2023-04-03-introducing-hedgehogs.md  2023-04-05-conways-game-of-life-graph.md  2023-04-09-conways-game-of-life-3d-graph.md  2023-12-02-semigroups-and-distributed-systems.md
plots/: hedgehogs1.dot  scaling1.dot  scaling2.dot
posts/: 2021-09-04-functional-dependency-injection.md  2023-01-01-scaling-a-runtime.md  2023-03-27-large-language-models-and-open-source.md  2023-03-28-count-distinct-at-scale-I.md  2023-03-30-count-distinct-at-scale-II.md  2023-04-03-introducing-hedgehogs.md  2023-04-05-conways-game-of-life-graph.md  2023-04-09-conways-game-of-life-3d-graph.md  2023-04-14-scaling-a-networked-application.md
talks/: build.sh  graphs.html  graphs.md  scala3.html  scala3.md  tdd.md
templates/: default.html  post-list.html  post.html  robots.txt  sitemap.xml  tags.html
