name:               blog
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll >= 4.15
                  , hakyll-sass >= 0.2.4
                  , pandoc-plot >= 1.5.5
                  , pandoc-types >= 1.22
                  , pandoc >= 2.19
                  , text
                  , time >= 1.9

  ghc-options:      -threaded
  default-language: Haskell2010
